kubernetes/Int/deployments/default/spoolman/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: spoolman
  template:
    metadata:
      labels:
        app: spoolman
    spec:
      containers:
        - name: spoolman
          image: ghcr.io/donkie/spoolman:0.22.1
          volumeMounts:
            - name: pvc
              mountPath: /home/app/.local/share/spoolman
              subPath: database
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: spoolman
