kubernetes/Int/deployments/default/spoolman/app/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spoolman
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
  - "spoolman.noms.tv"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: spoolman
          port: 8000
